<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F892A6"
    android:scrollbars="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="197dp"
        android:layout_height="27dp"
        android:layout_marginTop="4dp"
        android:text="@string/proyecto"
        android:textColor="#351E1E"
        android:textColorLink="#50201F"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtMatricula"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hmatricula"
        android:inputType="textPersonName"
        android:textColor="#F500A3"
        android:textColorHighlight="#1D2E42"
        android:textColorHint="#111957"
        android:textColorLink="#D81212"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textColorHint="#111957"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMatricula" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textPersonName"
        android:textColorHint="#111957"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <EditText
        android:id="@+id/txtCalificacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/calificacionfinal"
        android:inputType="textPersonName"
        android:textColorHint="#111957"
        android:textColorLink="#1D2981"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreo" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="Graba"
        android:text="@string/bgrabar"
        android:textColor="#8E24AA"
        android:textColorLink="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCalificacion"
        tools:text="@string/bgrabare" />

    <GridView
        android:id="@+id/gvDatos"
        android:layout_width="290dp"
        android:layout_height="267dp"
        android:numColumns="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="176dp"
        android:layout_height="83dp"
        android:contentDescription="@string/yadira"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/sistemas" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="207dp"
        android:layout_height="85dp"
        android:contentDescription="@string/alma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/alma1" />

</androidx.constraintlayout.widget.ConstraintLayout>